@@ -30,6 +30,7 @@
             <hudson-port>9000</hudson-port>
             <local-repo>/home/henrik/.m2/hudson</local-repo>
             <remote-repo>http://localhost:8081/nexus/content/groups/public/</remote-repo>
+            <argLine>-XX:MaxPermSize=1024m -Xmx2040m</argLine>
           </systemPropertyVariables>
         </configuration>
       </plugin>      
